--- a/source/_posts/2015-06-30-books-read-in-2015q2.markdown
+++ b/source/_posts/2015-06-30-books-read-in-2015q2.markdown
@@ -33,7 +33,7 @@ Books I want to finish:
 Books that have entered the queue:
 
   * [Mature optimization](http://carlos.bueno.org/optimization/mature-optimization.pdf), by Carlos Bueno
-  * [The Leprechauns of Software Engineering](https://leanpub.com/leprechauns) by Laurent Bossavit
+  * [The Leprechauns of Software Engineering](https://leanpub.com/leprechauns) by Laurent Bossavit, again
   * [XUnit Test Patterns](http://xunitpatterns.com/) by Gerard Meszaros
   * [Why programmers work at night](https://leanpub.com/nightowls) by Swizec Teller
   * [Let Over Lambda](http://letoverlambda.com/) by Doug Hoyte
