--- a/source/_posts/2015-06-30-books-read-in-2015q2.markdown
+++ b/source/_posts/2015-06-30-books-read-in-2015q2.markdown
@@ -14,7 +14,7 @@ categories:
 Books I've read this quarter Q2 on 2015:
 
   * [Flow](http://www.amazon.com/Flow-Psychology-Experience-Perennial-Classics/dp/0061339202) by Mihaly Csikszentmihalyi. Blog posts under the tag [flow](/{{site.category_dir}}/flow)
-  * [Growing Object-Oriented Software Guided by Tests](http://www.growing-object-oriented-software.com/) by Steve Freeman and Nat Pryce. Blog posts under the tag [goos](/{{site.category_dir}}/goos)
+  * [Growing Object-Oriented Software Guided by Tests](http://www.growing-object-oriented-software.com/) by Steve Freeman and Nat Pryce. Blog posts under the tag [goos](/{{site.category_dir}}/goos). Read in the '[@deAprendices][deaprendices]'s reading club'.
 
   
 Books started, not yet finished (WIP):
@@ -46,3 +46,5 @@ Books that have entered the queue:
 
 
 Starting in 2015-Q2, I'm also writing here the list of books that I want to read.
+
+[deaprendices]: https://twitter.com/@deaprendices
