--- a/source/_posts/2014-12-31-books-read-in-2014q4.markdown
+++ b/source/_posts/2014-12-31-books-read-in-2014q4.markdown
@@ -8,6 +8,7 @@ categories:
   - reading
   - 2014
   - Q4
+  - self-study
 ---
 
 Books I've read this quarter Q4 on 2014, as inspired by Manuel, on this [post](http://garajeando.blogspot.com.es/2015/04/books-i-read-january-april-2015.html):
