--- a/source/_posts/2015-03-31-books-read-in-2015q1.markdown
+++ b/source/_posts/2015-03-31-books-read-in-2015q1.markdown
@@ -8,6 +8,7 @@ categories:
   - reading
   - 2015
   - Q1
+  - self-study
 ---
 
 Books I've read this quarter Q1 on 2015, as inspired by Manuel, on this [post](http://garajeando.blogspot.com.es/2015/04/books-i-read-january-april-2015.html):
