clojure for the brave and true enters the list

--- a/source/_posts/2015-09-30-books-read-in-2015q3.markdown
+++ b/source/_posts/2015-09-30-books-read-in-2015q3.markdown
@@ -22,6 +22,8 @@ Books I want to finish:
 
 Books that have entered the queue:
 
+  * [Clojure for the brave and true](http://www.braveclojure.com/#toc)
+
 {% comment %}
 
 repository for WIP books:
