--- a/source/_posts/2015-09-30-books-read-in-2015q3.markdown
+++ b/source/_posts/2015-09-30-books-read-in-2015q3.markdown
@@ -21,6 +21,8 @@ Books I've read this quarter[^1]:
 
 Books started, not yet finished (WIP):
 
+  * Haskell Programming, By Chris Allen and Julie Moronuki. This book is still in progress and I'm reviewing it
+
   
 Books I want to finish:
 
