add 'how to solve it' book to the queue

--- a/source/_posts/2015-09-30-books-read-in-2015q3.markdown
+++ b/source/_posts/2015-09-30-books-read-in-2015q3.markdown
@@ -30,6 +30,7 @@ Books I want to finish:
 Books that have entered the queue:
 
   * [Clojure for the brave and true](http://www.braveclojure.com/#toc)
+  * [How to Solve It: A New Aspect of Mathematical Method](http://press.princeton.edu/titles/669.html) by George Pólya
 
 {% comment %}
 
