--- a/source/_posts/2015-09-30-books-read-in-2015q3.markdown
+++ b/source/_posts/2015-09-30-books-read-in-2015q3.markdown
@@ -33,6 +33,7 @@ Books that have entered the queue:
 
   * [Clojure for the brave and true](http://www.braveclojure.com/#toc)
   * [How to Solve It: A New Aspect of Mathematical Method](http://press.princeton.edu/titles/669.html) by George Pólya
+  * [Conceptual Mathematics: A First Introduction to Categories](http://www.amazon.com/Conceptual-Mathematics-First-Introduction-Categories/dp/052171916X) by Lawvere and Schanuel
 
 {% comment %}
 
