--- a/source/_posts/2015-12-31-books-read-in-2015q4.markdown
+++ b/source/_posts/2015-12-31-books-read-in-2015q4.markdown
@@ -23,6 +23,7 @@ Books started, not yet finished (WIP):
   * [Haskell Programming](http://haskellbook.com/), By Chris Allen and Julie Moronuki. This book is still in progress and I'm reviewing it
   * [Functional Programming Patterns in Scala and Clojure](https://pragprog.com/book/mbfpp/functional-programming-patterns-in-scala-and-clojure) by Michael Bevilacqua-Linn
   * [Pragmatic Thinking and Learning: Refactor Your Wetware](https://pragprog.com/book/ahptl/pragmatic-thinking-and-learning) by Andy Hunt  
+  * [Structure and Interpretation of Computer Programs](http://mitpress.mit.edu/sicp/) by Abelson, Sussman, and Sussman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [sicp](/{{site.category_dir}}/sicp).
 
   
 Books I want to finish:
@@ -51,7 +52,6 @@ Books that in the queue:
   * [Why programmers work at night](https://leanpub.com/nightowls) by Swizec Teller
   * [Let Over Lambda](http://letoverlambda.com/) by Doug Hoyte
   * [The Haskell Road to Logic, Math and Programming](http://fldit-www.cs.uni-dortmund.de/~peter/PS07/HR.pdf) by Kees Doets and Jan van Eijck
-  * [Structure and Interpretation of Computer Programs](http://mitpress.mit.edu/sicp/) by Abelson, Sussman, and Sussman
   * [Types and Programming Languages](http://www.cis.upenn.edu/~bcpierce/tapl/) by Benjamin C. Pierce
   * [Fundamentals of Object-oriented Design in UML](http://www.amazon.co.uk/dp/020169946X/ref=pe_385721_37038051_TE_3p_dp_1) by Meilir Page-Jones
   * [Clojure for the brave and true](http://www.braveclojure.com/#toc)
