--- a/source/_posts/2015-12-31-books-read-in-2015q4.markdown
+++ b/source/_posts/2015-12-31-books-read-in-2015q4.markdown
@@ -29,6 +29,8 @@ Books I want to finish:
 
 Books that have entered the queue:
 
+  * [Programming Languages: Application and Interpretation](http://cs.brown.edu/~sk/Publications/Books/ProgLangs/2007-04-26/) by Shriram Krishnamurthi
+
 {% comment %}
 
 repository for WIP books:
