--- a/source/_posts/2015-12-31-books-read-in-2015q4.markdown
+++ b/source/_posts/2015-12-31-books-read-in-2015q4.markdown
@@ -45,7 +45,7 @@ repository for WIP books:
   * [Java Performance: The Definitive Guide](http://shop.oreilly.com/product/0636920028499.do) by Scott Oaks
   * [Scrum and XP from the trenches](http://www.infoq.com/minibooks/scrum-xp-from-the-trenches) by Henrik Kniberg
 
-Books that in the queue:
+Books in the queue:
 
   * [Mature optimization](http://carlos.bueno.org/optimization/mature-optimization.pdf), by Carlos Bueno
   * [XUnit Test Patterns](http://xunitpatterns.com/) by Gerard Meszaros
