add book: Software Architecture for Developers

--- a/source/_posts/2015-12-31-books-read-in-2015q4.markdown
+++ b/source/_posts/2015-12-31-books-read-in-2015q4.markdown
@@ -40,6 +40,7 @@ Books that have entered the queue:
   * [Bridging the Communication Gap](http://books.gojko.net/bridging-the-communication-gap/) by Gojko Adzic
   * [Specification by Example](http://books.gojko.net/specification-by-example/) by Gojko Adzic
   * [The Cucumber book](https://pragprog.com/book/hwcuc/the-cucumber-book) by Matt Wynne and Aslak Hellesøy
+  * [Software Architecture for Developers](https://leanpub.com/software-architecture-for-developers) by Simon Brown
 
 {% comment %}
 
