finish reading book

--- a/source/_posts/2016-03-31-books-read-in-2016q1.markdown
+++ b/source/_posts/2016-03-31-books-read-in-2016q1.markdown
@@ -14,6 +14,8 @@ categories:
 
 Books I've read this quarter[^1]:
 
+ * [101 cosas que ya sabes, pero siempre olvidas](http://www.amazon.es/cosas-sabes-siempre-olvidas-Pr%C3%A1cticos/dp/8408104314) by Ernie J. Zelinski; in Spanish
+
 [^1]:  The ending date of the quarter is the same as the publication date
 
 Books started, not yet finished (WIP):
