--- a/source/_posts/2016-06-30-books-read-in-2016q2.markdown
+++ b/source/_posts/2016-06-30-books-read-in-2016q2.markdown
@@ -1,4 +1,4 @@
----
+7---
 published: false
 layout: post
 title: "Books read in 2016Q2"
@@ -18,6 +18,8 @@ Books I've read this quarter[^1]:
 [^1]:  The ending date of the quarter is the same as the publication date
 
 Books started, not yet finished (WIP):
+
+  * [Domain-Driven Design: Tackling Complexity in the Heart of Software](http://www.amazon.com/exec/obidos/ASIN/0321125215) by Eric Evans, again.
 
   
 Books I want to finish. Usually come from another quarter:
