--- a/source/_posts/2016-06-30-books-read-in-2016q2.markdown
+++ b/source/_posts/2016-06-30-books-read-in-2016q2.markdown
@@ -14,6 +14,7 @@ categories:
 Books I've read this quarter[^1]:
 
   * [Building Microservices, Designing Fine-Grained Systems](http://shop.oreilly.com/product/0636920033158.do), by Sam Newman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [building-microservices](/{{site.category_dir}}/building-microservices)
+  * [Release It! - Design and Deploy Production-Ready Software](https://pragprog.com/book/mnee/release-it), by Michael T. Nygard, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [release-it](/{{site.category_dir}}/release-it)
 
 
 [^1]:  The ending date of the quarter is the same as the publication date
