--- a/content/blog/2016-06-30-books-read-in-2016q2.markdown
+++ b/content/blog/2016-06-30-books-read-in-2016q2.markdown
@@ -19,6 +19,10 @@ Books I've read this quarter[^1]:
   * [Building Microservices, Designing Fine-Grained Systems](http://shop.oreilly.com/product/0636920033158.do), by Sam Newman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [building-microservices](/{{site.category_dir}}/building-microservices)
   * [Reinventing Organizations](http://www.reinventingorganizations.com/) by Frederic Laloux. Blog posts under the tag [reinventing-organizations](/{{site.category_dir}}/reinventing-organizations)
 
+Non-technical:
+
+  * [L'acabadora](http://www.llibres.cat/llibres-de-narrativa-en-catala/211579-lacabadora.html), by Michela Murgia
+
 
 [^1]:  The ending date of the quarter is the same as the publication date
 
