--- a/content/blog/2016-06-30-books-read-in-2016q2.markdown
+++ b/content/blog/2016-06-30-books-read-in-2016q2.markdown
@@ -22,7 +22,7 @@ Books I've read this quarter[^1]:
 Non-technical:
 
   * [L'acabadora](http://www.llibres.cat/llibres-de-narrativa-en-catala/211579-lacabadora.html), by Michela Murgia
-  * [Disrupted: My Misadventure in the Start-Up Bubble](https://www.amazon.com/Disrupted-My-Misadventure-Start-Up-Bubble/dp/0316306088) by Dan Lions
+  * [Disrupted: My Misadventure in the Start-Up Bubble](https://www.amazon.com/Disrupted-My-Misadventure-Start-Up-Bubble/dp/0316306088) by Dan Lyons
 
 
 [^1]:  The ending date of the quarter is the same as the publication date
