--- a/content/blog/2015-09-30-books-read-in-2015q3.markdown
+++ b/content/blog/2015-09-30-books-read-in-2015q3.markdown
@@ -15,8 +15,8 @@ Books I've read this quarter[^1]:
 
 [^1]:  The ending date of the quarter is the same as the publication date
 
-  * [The Craftsman](http://www.amazon.co.uk/Craftsman-Richard-Sennett/dp/0141022094) by Richard Sennett. Posts under the tag [the-craftsman](/{{site.category_dir}}/the-craftsman)
-  * [Software Craftsmanship: The New Imperative](http://www.amazon.co.uk/Software-Craftsmanship-Imperative-McBreen-Aug-2001/dp/B00L6JZAT0) by Pete McBreen. Posts under the tag [software-craftsmanship-book](/{{site.category_dir}}/software-craftsmanship-book)
+  * [The Craftsman](http://www.amazon.co.uk/Craftsman-Richard-Sennett/dp/0141022094) by Richard Sennett. Posts under the tag [the-craftsman](/{{< category "the-craftsman" >}}/)
+  * [Software Craftsmanship: The New Imperative](http://www.amazon.co.uk/Software-Craftsmanship-Imperative-McBreen-Aug-2001/dp/B00L6JZAT0) by Pete McBreen. Posts under the tag [software-craftsmanship-book](/{{< category "software-craftsmanship-book" >}}/)
   * [Lisp Hackers](https://leanpub.com/lisphackers) by Vsevolod Dyomkin
   * [The Passionate Programmer: Creating a Remarkable Career in Software Development](https://pragprog.com/book/cfcar2/the-passionate-programmer) by Chad Fowler.
 
@@ -43,8 +43,8 @@ repository for WIP books:
 
   * [The Well-Grounded Java Developer](http://www.manning.com/evans/) by Benjamin J. Evans and Martijn Verburg
   * [Learn You a Haskell for Great Good!](http://learnyouahaskell.com/) by Miran Lipovača
-  * [Working Effectively with Legacy Code](http://www.amazon.co.uk/Working-Effectively-Legacy-Robert-Martin/dp/0131177052) by Michael Feathers, again. Blog posts under the tag [wewlc](/{{site.category_dir}}/wewlc)
-  * [Practical Object-Oriented Design in Ruby, An Agile Primer (POODR)](http://www.poodr.com/) by Sandi Metz, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [poodr](/{{site.category_dir}}/poodr).
+  * [Working Effectively with Legacy Code](http://www.amazon.co.uk/Working-Effectively-Legacy-Robert-Martin/dp/0131177052) by Michael Feathers, again. Blog posts under the tag [wewlc](/{{< category "wewlc" >}}/)
+  * [Practical Object-Oriented Design in Ruby, An Agile Primer (POODR)](http://www.poodr.com/) by Sandi Metz, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [poodr](/{{< category "poodr" >}}/).
   
   Books I want to finish:
 
