--- a/content/blog/2015-12-31-books-read-in-2015q4.markdown
+++ b/content/blog/2015-12-31-books-read-in-2015q4.markdown
@@ -15,13 +15,13 @@ Books I've read this quarter[^1]:
 
 [^1]:  The ending date of the quarter is the same as the publication date
 
-  * [Practical Object-Oriented Design in Ruby, An Agile Primer (POODR)](http://www.poodr.com/) by Sandi Metz, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [poodr](/{{site.category_dir}}/poodr).
+  * [Practical Object-Oriented Design in Ruby, An Agile Primer (POODR)](http://www.poodr.com/) by Sandi Metz, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [poodr](/{{< category "poodr" >}}/).
 
 Books started, not yet finished (WIP):
 
   * [Haskell Programming](http://haskellbook.com/), By Chris Allen and Julie Moronuki. This book is still in progress and I'm reviewing it
   * [Pragmatic Thinking and Learning: Refactor Your Wetware](https://pragprog.com/book/ahptl/pragmatic-thinking-and-learning) by Andy Hunt  
-  * [Structure and Interpretation of Computer Programs](http://mitpress.mit.edu/sicp/) by Abelson, Sussman, and Sussman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [sicp](/{{site.category_dir}}/sicp).
+  * [Structure and Interpretation of Computer Programs](http://mitpress.mit.edu/sicp/) by Abelson, Sussman, and Sussman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [sicp](/{{< category "sicp" >}}/).
   
 Books I want to finish:
   * [The Leprechauns of Software Engineering](https://leanpub.com/leprechauns) by Laurent Bossavit, again. [Gift](https://twitter.com/alvarobiz/status/611799849911103488)  
@@ -49,7 +49,7 @@ repository for WIP books:
 
   * [The Well-Grounded Java Developer](http://www.manning.com/evans/) by Benjamin J. Evans and Martijn Verburg
   * [Learn You a Haskell for Great Good!](http://learnyouahaskell.com/) by Miran Lipovača
-  * [Working Effectively with Legacy Code](http://www.amazon.co.uk/Working-Effectively-Legacy-Robert-Martin/dp/0131177052) by Michael Feathers, again. Blog posts under the tag [wewlc](/{{site.category_dir}}/wewlc)
+  * [Working Effectively with Legacy Code](http://www.amazon.co.uk/Working-Effectively-Legacy-Robert-Martin/dp/0131177052) by Michael Feathers, again. Blog posts under the tag [wewlc](/{{< category "wewlc" >}}/)
   
   Books I want to finish:
 
