--- a/content/blog/2016-03-31-books-read-in-2016q1.markdown
+++ b/content/blog/2016-03-31-books-read-in-2016q1.markdown
@@ -14,13 +14,13 @@ url: /blog/2016/03/31/books-read-in-2016q1/
 Books I've read this quarter[^1]:
 
  * [101 cosas que ya sabes, pero siempre olvidas](http://www.amazon.es/cosas-sabes-siempre-olvidas-Pr%C3%A1cticos/dp/8408104314) by Ernie J. Zelinski; in Spanish
- * [Structure and Interpretation of Computer Programs](http://mitpress.mit.edu/sicp/) by Abelson, Sussman, and Sussman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [sicp](/{{site.category_dir}}/sicp). Only chapters 1 and 2.
+ * [Structure and Interpretation of Computer Programs](http://mitpress.mit.edu/sicp/) by Abelson, Sussman, and Sussman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [sicp](/{{< category "sicp" >}}/). Only chapters 1 and 2.
 
 [^1]:  The ending date of the quarter is the same as the publication date
 
 Books started, not yet finished (WIP):
 
-  * Building microservices, by Sam Newman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [building-microservices](/{{site.category_dir}}/building-microservices)
+  * Building microservices, by Sam Newman, with the '[@deAprendices][deaprendices]'s reading club'. Blog posts under the tag [building-microservices](/{{< category "building-microservices" >}}/)
   * [Why programmers work at night](https://leanpub.com/nightowls) by Swizec Teller
   * [Readings in Database Systems, 5th Edition](http://www.redbook.io/) by Peter Bailis, Joseph M. Hellerstein, Michael Stonebraker, editors
   
