add book by Rifkin

--- a/content/blog/2016-09-30-books-read-in-2016q3.markdown
+++ b/content/blog/2016-09-30-books-read-in-2016q3.markdown
@@ -18,6 +18,10 @@ Books I've read this quarter[^1]:
 
 [^1]:  The ending date of the quarter is the same as the publication date
 
+Non-technical:
+
+  * [The Zero Marginal Cost Society: The Internet of Things, the Collaborative Commons, and the Eclipse of Capitalism](http://www.thezeromarginalcostsociety.com/pages/The-Book.cfm), by Jeremy Rifkin
+
 Books started, not yet finished (WIP):
 
 
