add book by Stephenson

--- a/content/blog/2016-09-30-books-read-in-2016q3.markdown
+++ b/content/blog/2016-09-30-books-read-in-2016q3.markdown
@@ -21,6 +21,7 @@ Books I've read this quarter[^1]:
 Non-technical:
 
   * [The Zero Marginal Cost Society: The Internet of Things, the Collaborative Commons, and the Eclipse of Capitalism](http://www.thezeromarginalcostsociety.com/pages/The-Book.cfm), by Jeremy Rifkin
+  * [Snow Crash](https://en.wikipedia.org/wiki/Snow_Crash), by Neal Stephenson
 
 Books started, not yet finished (WIP):
 
