--- a/content/blog/2016-09-30-books-read-in-2016q3.markdown
+++ b/content/blog/2016-09-30-books-read-in-2016q3.markdown
@@ -14,6 +14,7 @@ url: /blog/2016/09/30/books-read-in-2016q3/
 Books I've read this quarter[^1]:
 
   * [Extreme Programming Pocket Guide](http://shop.oreilly.com/product/9780596004859.do) by Chromatic
+  * [Notes to a Software Team Leader (1st Edition)](https://leanpub.com/teamleader), by Roy Osherove
 
 
 [^1]:  The ending date of the quarter is the same as the publication date
