--- a/content/blog/2016-09-30-books-read-in-2016q3.markdown
+++ b/content/blog/2016-09-30-books-read-in-2016q3.markdown
@@ -23,6 +23,7 @@ Non-technical:
 
   * [The Zero Marginal Cost Society: The Internet of Things, the Collaborative Commons, and the Eclipse of Capitalism](http://www.thezeromarginalcostsociety.com/pages/The-Book.cfm), by Jeremy Rifkin
   * [Snow Crash](https://en.wikipedia.org/wiki/Snow_Crash), by Neal Stephenson
+  * [La guerra no tiene rostro de mujer](http://www.casadellibro.com/libro-la-guerra-no-tiene-rostro-de-mujer/9788499925752/2630904), by Svetlana Aleksiévich
 
 Books started, not yet finished (WIP):
 
