start reading book by Kua

--- a/content/blog/2016-09-30-books-read-in-2016q3.markdown
+++ b/content/blog/2016-09-30-books-read-in-2016q3.markdown
@@ -27,7 +27,7 @@ Non-technical:
 
 Books started, not yet finished (WIP):
 
-
+  * [Talking with Tech Leads: From Novices to Practitioners](https://leanpub.com/talking-with-tech-leads) by Patrick Kua
 
 Books I want to finish. Usually come from another quarter:
 
