add more non-technical books

--- a/content/blog/2016-12-31-books-read-2016Q4.markdown
+++ b/content/blog/2016-12-31-books-read-2016Q4.markdown
@@ -33,6 +33,10 @@ Non-technical that have entered the queue:
   - El camino al 18J, Payne
   - Cartas desde la revolución bolchevique, Sadoul
   - Shogun: The Life of Tokugawa Ieyasu, Sadler
+  - Els jueus i Catalunya, Villatoro
+  - Russell en 90 minutos, Strathern
+  - El problema de los tres cuerpos, Liu
+  - Gödel, Escher, Bach: An Eternal Golden Braid, Hofstadter
 
 <!--
 
