Add finished book

--- a/content/blog/2017-06-30-books-read-2017Q2.markdown
+++ b/content/blog/2017-06-30-books-read-2017Q2.markdown
@@ -17,6 +17,10 @@ title: Books read in 2017Q2
 
 (I've changed how I organize my books. More, here (TODO))
 
+Finished:
+
+  * Homenaje a Catalunya, George Orwell
+
 <!--
 You can delete here and below
 -->
