Add finished book (note)

--- a/content/blog/2017-06-30-books-read-2017Q2.markdown
+++ b/content/blog/2017-06-30-books-read-2017Q2.markdown
@@ -19,7 +19,7 @@ title: Books read in 2017Q2
 
 Finished:
 
-  * Homenaje a Catalunya, George Orwell
+  * Homenaje a Catalunya, George Orwell. In Spanish
 
 <!--
 You can delete here and below
