Add finished book (with note)

--- a/content/blog/2017-06-30-books-read-2017Q2.markdown
+++ b/content/blog/2017-06-30-books-read-2017Q2.markdown
@@ -20,6 +20,7 @@ title: Books read in 2017Q2
 Finished:
 
   * Homenaje a Catalunya, George Orwell. In Spanish
+  * Russell en 90 minutos. In Spanish.
 
 <!--
 You can delete here and below
