--- a/content/blog/2017-06-30-books-read-2017Q2.markdown
+++ b/content/blog/2017-06-30-books-read-2017Q2.markdown
@@ -19,8 +19,8 @@ title: Books read in 2017Q2
 
 Finished:
 
-  * Homenaje a Catalunya, George Orwell. In Spanish
-  * Russell en 90 minutos. In Spanish.
+  * Homenaje a Catalunya, George Orwell. In Spanish. Non-technical
+  * Russell en 90 minutos. In Spanish. Non-technical
 
 <!--
 You can delete here and below
