--- a/content/blog/2017-06-30-books-read-2017Q2.markdown
+++ b/content/blog/2017-06-30-books-read-2017Q2.markdown
@@ -8,8 +8,8 @@ categories:
 - codurance
 comments: true
 date: 2017-06-30T21:00:00Z
-published: false
 title: Books read in 2017Q2
+url: /blog/2017/06/30/books-read-2017q2/
 ---
 
 [deaprendices]: https://twitter.com/@deaprendices
